--- a/index.html
+++ b/index.html
@@ -2,77 +2,26 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="موقع شرحك لتعليم تحسين محركات البحث SEO بأسلوب عملي ومجاني باللغة العربية.">
   <title>شرحك - تعلم SEO بالعربي</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      margin: 0;
-      background: #f9f9f9;
-      color: #222;
-    }
-    header {
-      background-color: #2e89ff;
-      padding: 20px;
-      text-align: center;
-      color: white;
-    }
-    .logo {
-      max-width: 140px;
-      margin-bottom: 10px;
-    }
-    .hero {
-      background: #1e1e2f;
-      color: white;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    .hero p {
-      font-size: 17px;
-      line-height: 1.9;
-    }
-    .hero a {
-      display: inline-block;
-      margin-top: 20px;
-      background: linear-gradient(45deg, #00c6ff, #0072ff);
-      color: white;
-      padding: 12px 28px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    }
-    footer {
-      text-align: center;
-      font-size: 14px;
-      padding: 15px;
-      color: #666;
-    }
-  </style>
 </head>
-<body>
+<body style="background-color: #f0f0f0; font-family: 'Cairo', sans-serif; text-align: center; padding: 40px;">
 
-  <header>
-    <img src="https://raw.githubusercontent.com/qusay007/shar7k-logo/main/ad7eb9e5-7878-48bc-b273-e3c80e229110.webp" alt="لوجو شرحك" class="logo">
-    <h1>شرحك – دليلك في عالم SEO</h1>
-  </header>
+  <img src="https://raw.githubusercontent.com/qusay007/shar7k-logo/main/ad7eb9e5-7878-48bc-b273-e3c80e229110.webp"
+       alt="لوجو شرحك" style="max-width: 180px; border-radius: 10px;">
 
-  <section class="hero">
-    <h2>مرحبًا بك في موقع شرحك</h2>
-    <p>
-      <strong>شرحك</strong> هو موقع عربي متخصص في تبسيط مفاهيم  
-      <bdi style="font-family: Tahoma, sans-serif;">SEO</bdi> (تحسين محركات البحث) بأسلوب عملي وواضح.<br>
-      نوفر لك شروحات مرتبة، ملفات قابلة للتحميل، ونصائح واقعية تساعدك على تحسين ظهور موقعك في  
-      <bdi style="font-family: Tahoma, sans-serif;">Google</bdi> وتحقيق نتائج فعالة في وقت قصير.
-    </p>
-    <a href="https://sites.google.com/view/shar7k/lessons">ابدأ الآن</a>
-  </section>
+  <h1 style="color: #2e89ff;">شرحك – دليلك في عالم SEO</h1>
 
-  <footer>
-    جميع الحقوق محفوظة © قصي إبراهيم - 2025
-  </footer>
+  <p style="font-size: 17px; color: #333;">
+    <strong>شرحك</strong> هو موقع عربي متخصص في تبسيط مفاهيم
+    <bdi style="font-family: Tahoma;">SEO</bdi> وتحسين محركات البحث بشكل عملي.<br>
+    نوفر شروحات، ملفات قابلة للتحميل، ونصائح ترفع ترتيب موقعك في
+    <bdi style="font-family: Tahoma;">Google</bdi>.
+  </p>
+
+  <a href="https://sites.google.com/view/shar7k/lessons"
+     style="display: inline-block; margin-top: 20px; background-color: #2e89ff; color: white; padding: 12px 24px; border-radius: 8px; text-decoration: none;">
+    ابدأ الآن
+  </a>
 
 </body>
 </html>
