--- a/lessons.html
+++ b/lessons.html
@@ -87,16 +87,15 @@
     <a href="https://sites.google.com/view/shar7k/lessons/lesson-8" target="_blank">عرض الدرس</a>
   </div>
 </div>
+<div class="card">
+  <h3>الدرس 9: Enterprise SEO</h3>
+  <p>كيفية إدارة وتحسين SEO للمواقع الضخمة والمؤسسات الكبيرة، مع التركيز على الأتمتة والبنية الفنية.</p>
+  <a href="https://sites.google.com/view/shar7k/lessons/lesson-9" target="_blank">عرض الدرس</a>
+</div>
 
 <!-- Footer -->
 <footer style="background-color: #2e89ff; color: white; padding: 20px 10px; margin-top: 40px;">
   <p style="margin: 0 0 10px;">© 2025 شرحك - جميع الحقوق محفوظة</p>
-  <nav>
-    <a href="index.html" style="color: white; margin: 0 10px; text-decoration: none; font-weight: bold;">🏠 الرئيسية</a>
-    <a href="lessons.html" style="color: white; margin: 0 10px; text-decoration: none; font-weight: bold;">📚 الدروس</a>
-    <a href="about.html" style="color: white; margin: 0 10px; text-decoration: none; font-weight: bold;">👤 من نحن</a>
-    <a href="contact.html" style="color: white; margin: 0 10px; text-decoration: none; font-weight: bold;">📬 تواصل</a>
-  </nav>
 </footer>
 
 </body>
