--- a/lessons.html
+++ b/lessons.html
@@ -86,6 +86,12 @@
     <p>أعمق مراجعة فنية لموقعك من السرعة إلى الفهرسة.</p>
     <a href="https://sites.google.com/view/shar7k/lessons/lesson-8" target="_blank">عرض الدرس</a>
   </div>
+  <div class="card">
+  <h3>الدرس 9: Enterprise SEO</h3>
+  <p>تحسين SEO على نطاق واسع للشركات الكبرى، يشمل الأتمتة، البنية التحتية، وإدارة آلاف الصفحات.</p>
+  <a href="https://sites.google.com/view/shar7k/lessons/lesson-9" target="_blank">عرض الدرس</a>
+</div>
+
 </div>
 <div class="card">
   <h3>الدرس 9: Enterprise SEO</h3>
