--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <!-- ✅ تحسين SEO - داخل <head> -->
+<meta name="description" content="شرحك هو موقع عربي لتعلم SEO بخطوات عملية – دروس، ملفات PDF، نصائح لتحسين ظهور موقعك في Google.">
+<meta name="keywords" content="SEO, شرحك, تحسين محركات البحث, تعلم سيو, دروس سيو, PDF SEO, قصي إبراهيم">
+<meta name="author" content="قصي إبراهيم">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://qusay007.github.io/shar7k-site/">
+
+<!-- ✅ اللغة -->
+<meta http-equiv="Content-Language" content="ar">
+
+<!-- ✅ Open Graph (فيسبوك) -->
+<meta property="og:title" content="شرحك – دليلك في عالم SEO">
+<meta property="og:description" content="دروس وملفات لتعلم تحسين محركات البحث مجانًا وباللغة العربية.">
+<meta property="og:image" content="https://raw.githubusercontent.com/qusay007/shar7k-logo/main/ad7eb9e5-7878-48bc-b273-e3c80e229110.webp">
+<meta property="og:url" content="https://qusay007.github.io/shar7k-site/">
+<meta property="og:type" content="website">
+
+<!-- ✅ Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="شرحك – دليلك في عالم SEO">
+<meta name="twitter:description" content="كل ما تحتاجه لتعلم سيو من الصفر – دروس واضحة وملفات قابلة للتحميل.">
+<meta name="twitter:image" content="https://raw.githubusercontent.com/qusay007/shar7k-logo/main/ad7eb9e5-7878-48bc-b273-e3c80e229110.webp">
+
   <meta charset="UTF-8">
   <title>شرحك - الصفحة الرئيسية</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
