--- a/lessons.html
+++ b/lessons.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <!-- داخل <head> -->
+<meta name="description" content="كل دروس شرحك في مكان واحد – من المبتدئين حتى المراجعة التقنية.">
+<meta name="keywords" content="دروس SEO, تعلم سيو, شرحك, تحسين الموقع, شرح سيو, دروس تحسين محركات البحث">
+<meta name="author" content="قصي إبراهيم">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://qusay007.github.io/shar7k-site/lessons.html">
+
+<meta property="og:title" content="دروس شرحك – تعلم SEO خطوة بخطوة">
+<meta property="og:description" content="استعرض جميع دروس شرحك باللغة العربية مع ملفات PDF وروابط مفيدة.">
+<meta property="og:image" content="https://raw.githubusercontent.com/qusay007/shar7k-logo/main/ad7eb9e5-7878-48bc-b273-e3c80e229110.webp">
+<meta property="og:url" content="https://qusay007.github.io/shar7k-site/lessons.html">
+<meta property="og:type" content="article">
+
   <meta charset="UTF-8">
   <title>الدروس - شرحك</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
