--- a/about.html
+++ b/about.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <!-- داخل <head> -->
+<meta name="description" content="تعرف على قصي إبراهيم، مؤسس شرحك ومدرب SEO منذ 2019.">
+<meta name="keywords" content="قصي إبراهيم, مدرب سيو, متخصص SEO, من هو قصي, شرحك, about shar7k">
+<meta name="author" content="قصي إبراهيم">
+<link rel="canonical" href="https://qusay007.github.io/shar7k-site/about.html">
+
+<meta property="og:title" content="من هو قصي – مؤسس شرحك">
+<meta property="og:description" content="قصي إبراهيم – مدرب SEO بخبرة من 2019. شغوف بنقل المعلومة بأبسط شكل.">
+<meta property="og:image" content="https://raw.githubusercontent.com/qusay007/shar7k-logo/main/ad7eb9e5-7878-48bc-b273-e3c80e229110.webp">
+<meta property="og:url" content="https://qusay007.github.io/shar7k-site/about.html">
+<meta property="og:type" content="profile">
+
   <meta charset="UTF-8">
   <title>من هو قصي؟ - شرحك</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
