--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <!-- داخل <head> -->
+<meta name="description" content="راسل شرحك لأي استفسار بخصوص الدروس أو SEO من خلال النموذج أو الإيميل.">
+<meta name="keywords" content="تواصل, شرحك, اتصل بنا, contact shar7k, ايميل شرحك, Qusay SEO">
+<meta name="author" content="قصي إبراهيم">
+<link rel="canonical" href="https://qusay007.github.io/shar7k-site/contact.html">
+
+<meta property="og:title" content="تواصل مع شرحك">
+<meta property="og:description" content="راسلنا عبر النموذج أو البريد الإلكتروني لمساعدتك في تعلم SEO.">
+<meta property="og:image" content="https://raw.githubusercontent.com/qusay007/shar7k-logo/main/ad7eb9e5-7878-48bc-b273-e3c80e229110.webp">
+<meta property="og:url" content="https://qusay007.github.io/shar7k-site/contact.html">
+<meta property="og:type" content="website">
+
   <meta charset="UTF-8">
   <title>تواصل معنا - شرحك</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
